# focal-guiding

./: .gitignore  .gitmodules  Dockerfile  README.md
mitsuba/data/scons/: qt5.py
mitsuba/src/integrators/: SConscript
mitsuba/src/integrators/path/: focal_guiding.h  focal_path.cpp  focal_path_aovs.h
mitsuba/src/mtsgui/resources/: docs.xml
visualizer/: CMakeLists.txt  imgui.ini
visualizer/cmake/: detect_emscripten.cmake  imgui.cmake  imgui.html
visualizer/data/: camera-obscura-conv.nose  dining-room-conv.nose  imgui.default.ini  living-room-conv.nose  modern-hall-conv.nose  modern-hall.ply  modern-living-room-conv.nose
visualizer/ext/: tinyexr.cpp  tinyexr.h
visualizer/include/visualizer/: Halton.hpp  ThreadPool.hpp  Uniform.hpp
visualizer/include/visualizer/core/: AABB.hpp  PRNG.hpp  math.hpp  platform.hpp
visualizer/include/visualizer/rt/: Line.hpp  Ray.hpp  Scene.hpp  Sensor.hpp
visualizer/src/: main.cpp  viridis.hpp
visualizer/src/apps/: Reibold.cpp  Reibold.hpp  Simulator.cpp  Simulator.hpp  Visualizer.cpp  Visualizer.hpp
